Fixed cases where the top level menu would wrap below the theme title in admin (fixes #2099)

--- a/platforms/common/css-compiled/g-admin.css
+++ b/platforms/common/css-compiled/g-admin.css
@@ -4031,6 +4031,21 @@ i.fa-gantry, i.fa-gantry-logo, i.fa-gantry-symbol, i.fa-gantry-logo-both, i.fa-g
   text-decoration: underline;
   border-bottom: 1px dotted #ed5565;
 }
+#g5-container .theme-title > * {
+  display: inline-block;
+  line-height: 1rem;
+}
+#g5-container .theme-title > *.fa-tint {
+  margin-top: 5px;
+}
+#g5-container .g-ellipsis {
+  display: inline-block;
+  max-width: 170px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+}
 
 #g5-container .button {
   background: #999999;
